[metadata]
name = vulnscan
version = 1.0.0
authors =
    Brainiac Rawkib
    Numonde Stanley
description = Network Vulnerability Scanner
long_description = file: README.md
urls = https://github.com/CyberMeStudio/VulnScanner
project_urls =
    repository = https://github.com/CyberMeStudio/VulnScanner

[options]
package_dir =
    = src
python_requires = 3.10
